# django-memcache-status

./: .env  .gitignore  .python-version  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.rst  pyproject.toml  pytest.ini  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflows/: push.yml
memcache_status/: __init__.py  admin.py  apps.py  utils.py
memcache_status/templates/memcache_status/: admin_index.html  index.html  memcache_status.html
memcache_status/templatetags/: memcache_status_tags.py
memcache_status/tests/: __init__.py  test_admin.py  test_urls.py  tests.py  urls.py
memcache_status/tests/testapp/: __init__.py  apps.py  settings.py  urls.py
