[metadata]
name = django-memcache-status
version = 2.0a0
description =
    A django application that displays the load and some other
    statistics about your memcached instances in the admin.
long_description = file: README.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-memcache-status
keywords = django, cache, memcache, memcached, statistics
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = '>=2.7'
install_requires =
    django>=1.11
    six

[isort]
known_first_party = memcache_status
default_section = THIRDPARTY
sections = FUTURE,STDLIB,THIRDPARTY,FIRSTPARTY,LOCALFOLDER
multi_line_output = 0
skip = migrations

[coverage:run]
source = eventlog
branch = True
omit =
    memcache_status/tests/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__

[coverage:html]
directory = /tmp/coverage_report/django-memcache-status
