[metadata]
name = django-memcache-status
version = 2.3a
description = "A django application that displays the load and other statistics about your memcached instances in the admin."
long_description = file: README.rst
author = Martin Mahner
author_email = martin@mahner.org
url = https://github.com/bartTC/django-memcache-status
keywords = django, cache, memcache, memcached, statistics
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Web Environment
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Framework :: Django

[options]
packages = find:
include_package_data = True
zip_safe = False
python_requires = >=3.8
install_requires =
    django>=3.2
